updating travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,27 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
-language: R
-sudo: false
+language: r
 cache: packages
+sudo: false
+warnings_are_errors: true
+r_check_args: --as-cran
+
+git:
+  depth: 5
+
+r_packages:
+ - devtools
+ - ape
+ - covr
+ - memoise
+ - phangorn
+ - R.cache
+ - Rdpack
+ - roxygen2
+ - testthat
+ -readr
+
+before_script:
+ - R -e "devtools::document()"
+
+after_success:
+  - Rscript -e "covr::codecov()"
