--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,12 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports:
+  dplyr,
+  readr,
+  tidyr,
+  graphics,
+  maps
 Suggests: knitr,
     rmarkdown,
     testthat
